--- a/client/src/scss/main.scss
+++ b/client/src/scss/main.scss
@@ -1,6 +1,10 @@
 @charset 'UTF-8';
 
+@import 'abstracts/all';
+
 @import 'base/reset';
 @import 'base/base';
 @import 'base/fonts';
 @import 'base/typography';
+
+@import 'components/all';
