#4 show image preview prior to upload fixed #4

--- a/client/src/scss/components/_uploadform.scss
+++ b/client/src/scss/components/_uploadform.scss
@@ -12,3 +12,10 @@
         @include btn--ghost($white-regular, $grey-light);
     }
 }
+
+.preview {
+    &__thumb {
+        height: 250px;
+        width: 250px;
+    }
+}
