--- a/client/src/scss/components/_uploadform.scss
+++ b/client/src/scss/components/_uploadform.scss
@@ -1,6 +1,8 @@
 .uploadform {
+    color: $white-regular;
     left: 50%;
     position: absolute;
+    text-align: center;
     top: 50%;
     transform: translate(-50%, -50%);
 
@@ -19,7 +21,17 @@
 
 .preview {
     &__thumb {
-        height: 250px;
-        width: 250px;
+        height: 150px;
+    }
+}
+
+.progress {
+    height: .4rem;
+    width: 100%;
+
+    &__fill {
+        background-color: $green-regular;
+        height: 100%;
+        width: 50%;
     }
 }
