fix font loading

--- a/client/src/scss/components/_uploadform.scss
+++ b/client/src/scss/components/_uploadform.scss
@@ -16,6 +16,11 @@
 
     &__button {
         @include btn--ghost($white-regular, $overlay-color);
+
+        &--remove {
+            border-radius: 50%;
+            min-width: 0;
+        }
     }
 }
 
