--- a/client/src/scss/base/_fonts.scss
+++ b/client/src/scss/base/_fonts.scss
@@ -1,7 +1,7 @@
 $fontsPath: '/assets/fonts/opensans/' !default;
 
 @font-face {
-    font-family: 'Open Sans';
+    font-family: 'open sans';
     src: url('#{$fontsPath}/Light/OpenSans-Light.eot');
     /* stylelint-disable */
     /* line too long */
@@ -15,11 +15,11 @@ $fontsPath: '/assets/fonts/opensans/' !default;
 }
 
 @font-face {
-    font-family: 'Open Sans';
+    font-family: 'open sans';
     src: url('#{$fontsPath}/LightItalic/OpenSans-LightItalic.eot');
     /* stylelint-disable */
     /* line too long */
-    src: 
+    src:
         url('#{$fontsPath}/LightItalic/OpenSans-LightItalic.eot?#iefix') format('embedded-opentype'),
         url('#{$fontsPath}/LightItalic/OpenSans-LightItalic.woff') format('woff'),
         url('#{$fontsPath}/LightItalic/OpenSans-LightItalic.ttf') format('truetype'),
@@ -30,11 +30,11 @@ $fontsPath: '/assets/fonts/opensans/' !default;
 }
 
 @font-face {
-    font-family: 'Open Sans';
+    font-family: 'open sans';
     src: url('#{$fontsPath}/Regular/OpenSans-Regular.eot');
     /* stylelint-disable */
     /* line too long */
-    src: 
+    src:
         url('#{$fontsPath}/Regular/OpenSans-Regular.eot?#iefix') format('embedded-opentype'),
         url('#{$fontsPath}/Regular/OpenSans-Regular.woff') format('woff'),
         url('#{$fontsPath}/Regular/OpenSans-Regular.ttf') format('truetype'),
@@ -45,11 +45,11 @@ $fontsPath: '/assets/fonts/opensans/' !default;
 }
 
 @font-face {
-    font-family: 'Open Sans';
+    font-family: 'open sans';
     src: url('#{$fontsPath}/Italic/OpenSans-Italic.eot');
     /* stylelint-disable */
     /* line too long */
-    src: 
+    src:
         url('#{$fontsPath}/Italic/OpenSans-Italic.eot?#iefix') format('embedded-opentype'),
         url('#{$fontsPath}/Italic/OpenSans-Italic.woff') format('woff'),
         url('#{$fontsPath}/Italic/OpenSans-Italic.ttf') format('truetype'),
@@ -60,11 +60,11 @@ $fontsPath: '/assets/fonts/opensans/' !default;
 }
 
 @font-face {
-    font-family: 'Open Sans';
+    font-family: 'open sans';
     src: url('#{$fontsPath}/Semibold/OpenSans-Semibold.eot');
     /* stylelint-disable */
     /* line too long */
-    src: 
+    src:
         url('#{$fontsPath}/Semibold/OpenSans-Semibold.eot?#iefix') format('embedded-opentype'),
         url('#{$fontsPath}/Semibold/OpenSans-Semibold.woff') format('woff'),
         url('#{$fontsPath}/Semibold/OpenSans-Semibold.ttf') format('truetype'),
@@ -75,11 +75,11 @@ $fontsPath: '/assets/fonts/opensans/' !default;
 }
 
 @font-face {
-    font-family: 'Open Sans';
+    font-family: 'open sans';
     src: url('#{$fontsPath}/SemiboldItalic/OpenSans-SemiboldItalic.eot');
     /* stylelint-disable */
     /* line too long */
-    src: 
+    src:
         url('#{$fontsPath}/SemiboldItalic/OpenSans-SemiboldItalic.eot?#iefix') format('embedded-opentype'),
         url('#{$fontsPath}/SemiboldItalic/OpenSans-SemiboldItalic.woff') format('woff'),
         url('#{$fontsPath}/SemiboldItalic/OpenSans-SemiboldItalic.ttf') format('truetype'),
@@ -90,11 +90,11 @@ $fontsPath: '/assets/fonts/opensans/' !default;
 }
 
 @font-face {
-    font-family: 'Open Sans';
+    font-family: 'open sans';
     src: url('#{$fontsPath}/Bold/OpenSans-Bold.eot');
     /* stylelint-disable */
     /* line too long */
-    src: 
+    src:
         url('#{$fontsPath}/Bold/OpenSans-Bold.eot?#iefix') format('embedded-opentype'),
         url('#{$fontsPath}/Bold/OpenSans-Bold.woff') format('woff'),
         url('#{$fontsPath}/Bold/OpenSans-Bold.ttf') format('truetype'),
@@ -105,11 +105,11 @@ $fontsPath: '/assets/fonts/opensans/' !default;
 }
 
 @font-face {
-    font-family: 'Open Sans';
+    font-family: 'open sans';
     src: url('#{$fontsPath}/BoldItalic/OpenSans-BoldItalic.eot');
     /* stylelint-disable */
     /* line too long */
-    src: 
+    src:
         url('#{$fontsPath}/BoldItalic/OpenSans-BoldItalic.eot?#iefix') format('embedded-opentype'),
         url('#{$fontsPath}/BoldItalic/OpenSans-BoldItalic.woff') format('woff'),
         url('#{$fontsPath}/BoldItalic/OpenSans-BoldItalic.ttf') format('truetype'),
@@ -120,11 +120,11 @@ $fontsPath: '/assets/fonts/opensans/' !default;
 }
 
 @font-face {
-    font-family: 'Open Sans';
+    font-family: 'open sans';
     src: url('#{$fontsPath}/ExtraBold/OpenSans-ExtraBold.eot');
     /* stylelint-disable */
     /* line too long */
-    src: 
+    src:
         url('#{$fontsPath}/ExtraBold/OpenSans-ExtraBold.eot?#iefix') format('embedded-opentype'),
         url('#{$fontsPath}/ExtraBold/OpenSans-ExtraBold.woff') format('woff'),
         url('#{$fontsPath}/ExtraBold/OpenSans-ExtraBold.ttf') format('truetype'),
@@ -136,11 +136,11 @@ $fontsPath: '/assets/fonts/opensans/' !default;
 
 
 @font-face {
-    font-family: 'Open Sans';
+    font-family: 'open sans';
     src: url('#{$fontsPath}/ExtraBoldItalic/OpenSans-ExtraBoldItalic.eot');
     /* stylelint-disable */
     /* line too long */
-    src: 
+    src:
         url('#{$fontsPath}/ExtraBoldItalic/OpenSans-ExtraBoldItalic.eot?#iefix') format('embedded-opentype'),
         url('#{$fontsPath}/ExtraBoldItalic/OpenSans-ExtraBoldItalic.woff') format('woff'),
         url('#{$fontsPath}/ExtraBoldItalic/OpenSans-ExtraBoldItalic.ttf') format('truetype'),
