#10 scss file per component

--- a/client/src/scss/components/_all.scss
+++ b/client/src/scss/components/_all.scss
@@ -1,4 +1,7 @@
 @import 'buttons';
 @import 'buttons-ghost';
 @import 'overlay';
-@import 'uploadform';
+
+@import 'uploadform/form';
+@import 'uploadform/preview';
+@import 'uploadform/progressbar';
