--- a/client/src/scss/components/uploadform/_form.scss
+++ b/client/src/scss/components/uploadform/_form.scss
@@ -1,6 +1,7 @@
 .uploadform {
     color: $white-regular;
     left: 50%;
+    padding: 1em;
     position: absolute;
     text-align: center;
     top: 50%;
