--- a/client/src/scss/components/_all.scss
+++ b/client/src/scss/components/_all.scss
@@ -2,6 +2,9 @@
 @import 'buttons-ghost';
 @import 'overlay';
 
+@import 'sidebar';
+@import 'image-panel';
+
 @import 'uploadform/form';
 @import 'uploadform/preview';
 @import 'uploadform/progressbar';
