#12 layout for filters

--- a/client/src/scss/components/_image-panel.scss
+++ b/client/src/scss/components/_image-panel.scss
@@ -1,4 +1,10 @@
 .image-panel {
+    overflow: hidden;
     text-align: center;
     width: 100%;
+
+    img {
+        max-height: 100%;
+        max-width: 100%;
+    }
 }
