--- a/client/src/scss/components/_sidebar.scss
+++ b/client/src/scss/components/_sidebar.scss
@@ -3,6 +3,7 @@
     background-color: $grey-darker;
     color: $white-regular;
     height: 100%;
+    overflow-y: auto;
     padding: 1rem 0;
     width: 30%;
 
