--- a/client/src/scss/components/_sidebar.scss
+++ b/client/src/scss/components/_sidebar.scss
@@ -11,8 +11,13 @@
         a {
             color: $white-regular;
             display: block;
-            padding: 0 .5rem .5rem 1rem;
+            padding: .25rem .5rem .25rem 1rem;
             width: 100%;
+
+            &:hover {
+                border: none;
+                background-color: $grey-light;
+            }
         }
     }
 }
