added messagebox for errors

--- a/client/src/scss/components/_all.scss
+++ b/client/src/scss/components/_all.scss
@@ -1,6 +1,7 @@
 @import 'buttons';
 @import 'buttons-ghost';
 @import 'overlay';
+@import 'messagebox';
 
 @import 'sidebar';
 @import 'image-panel';
