#19 description for filters #19 fixed

--- a/client/src/scss/base/_typography.scss
+++ b/client/src/scss/base/_typography.scss
@@ -9,27 +9,27 @@ h1, .header1 {
     }
 }
 h2 {
-    font: 1.8em;
+    font-size: 1.8em;
     font-weight: 300;
     padding: 0 0 1rem;
 }
 h3 {
-    font: 1.4em;
+    font-size: 1.4em;
     font-weight: 300;
     padding: 0 0 1rem;
 }
 h4 {
-    font: 1.2em;
+    font-size: 1.2em;
     font-weight: 300;
     padding: 0 0 1rem;
 }
 h5 {
-    font: 1.1em;
+    font-size: 1.1em;
     font-weight: 300;
     padding: 0 0 1rem;
 }
 h6 {
-    font: 1em;
+    font-size: 1em;
     font-weight: 300;
     padding: 0 0 1rem;
 }
