--- a/client/src/scss/components/_all.scss
+++ b/client/src/scss/components/_all.scss
@@ -2,6 +2,7 @@
 @import 'buttons-ghost';
 @import 'overlay';
 @import 'messagebox';
+@import 'popover';
 
 @import 'sidebar';
 @import 'image-panel';
