--- a/client/src/scss/components/_sidebar.scss
+++ b/client/src/scss/components/_sidebar.scss
@@ -8,6 +8,8 @@
     width: 30%;
 
     &__menu__item {
+        position: relative;
+
         a {
             color: $white-regular;
             display: block;
