added all filters with all arguments

--- a/client/src/scss/components/_all.scss
+++ b/client/src/scss/components/_all.scss
@@ -1,10 +1,12 @@
 @import 'buttons';
 @import 'buttons-ghost';
+@import 'forms';
 @import 'overlay';
 @import 'messagebox';
 @import 'popover';
 
 @import 'sidebar';
+@import 'sidebar-item';
 @import 'image-panel';
 
 @import 'uploadform/form';
